# rpgmtranslate-qt

./: README.md
rust/: Cargo.toml
src/: main.cpp
src/BookmarkMenu/: BookmarkList.hpp
src/MainWindow/: MainWindow.cpp  MainWindow.ui
src/MatchMenu/: MatchMenu.cpp  MatchTable.cpp  MatchTable.hpp
src/SearchPanelDock/: SearchResultList.cpp
src/TaskWorker/: TaskWorker.cpp
src/TranslationTable/: SpellHighlighter.cpp  SpellHighlighter.hpp  TranslationInput.cpp  TranslationInput.hpp  TranslationTable.cpp  TranslationTableDelegate.cpp  TranslationTableDelegate.hpp  TranslationTableModel.cpp  TranslationTableModel.hpp  WhitespaceHighlighter.cpp  WhitespaceHighlighter.hpp
src/utilities/: Aliases.hpp  FWD.hpp  Types.hpp
