[package]
name = "rpgmtranslate_rs"
version = "1.0.0"
edition = "2024"

[lib]
name = "rpgmtranslate_rs"
crate-type = ["staticlib"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
language-tokenizer = { version = "0.1.0", features = ["snowball"] }
llm-connector = "0.8.1"
log = "0.4.29"
num_enum = "0.7.5"
regex = "1.12.3"
rpgmad-lib = "4.0.0"
rvpacker-txt-rs-lib = "11.1.2"
serde = "1.0.228"
serde_json = "1.0.149"
strum_macros = "0.28.0"
thiserror = "2.0.18"
tiktoken-rs = "0.9.1"
walkdir = "2.5.0"
whatlang = "0.18.0"
cbindgen = "0.29.2"
tokio = "1.50.0"
yandex-translate-v2 = { version = "0.1.3", features = ["async"], default-features = false }
translators = { version = "0.1.5", features = ["google", "tokio-async"] }
deepl = "0.7.3"
languagetool-rust = { version = "3.0.1", default-features = false, optional = true }

[features]
languagetool = ["dep:languagetool-rust"]